# UltraRentz-MVP

./: README.md  package-lock.json  tailwind.config.js
contracts/urz-token/: Cargo.toml
src/: App.tsx  index.css  styles.css
src/components/: DaoReferralForm.tsx  DepositForm.tsx  RentDeposit.tsx  RentDepositApp.tsx  RentDepositOrchestrator.tsx  SignatoryForm.tsx  StakeDepositForm.tsx  SwapStakeForm.tsx  YieldInfo.tsx
src/utils/: polkadotApi.ts
