[package]
name = "urz-token"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "5.0", default-features = false }

[lib]
name = "urz_token"
path = "src/lib.rs"
crate-type = ["cdylib"] # Changed from ["cdylib", "rlib"] to only ["cdylib"]

[features]
default = ["std"]
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
]
